--- a/app/src/main/res/layout/activity_admin_contact_list_teacher.xml
+++ b/app/src/main/res/layout/activity_admin_contact_list_teacher.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_main"
+    android:background="@drawable/kk"
     android:paddingLeft="16dp"
     android:paddingTop="@dimen/cardview_compat_inset_shadow"
     android:paddingRight="16dp"
@@ -15,22 +15,13 @@
         android:id="@+id/recyclerview_admin_teacher"
         android:layout_width="0dp"
         android:layout_height="433dp"
-        android:layout_marginBottom="14dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_add_teacher"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button_add_teacher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:onClick="click_add_teacher"
-        android:text="Add Teacher"
+        android:layout_marginTop="38dp"
+        android:layout_marginBottom="80dp"
+        android:background="#BAB2B2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.477"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_name" />
 
     <EditText
         android:id="@+id/editText_search_teacher"
@@ -40,9 +31,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="40dp"
+        android:background="#BAB2B2"
         android:ems="10"
+        android:hint="הכנס שם"
         android:inputType="textPersonName"
-        android:hint="@string/name"
         app:layout_constraintBottom_toTopOf="@+id/checkBox_age"
         app:layout_constraintEnd_toStartOf="@+id/button_search_teacher"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,8 +48,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="47dp"
+        android:backgroundTint="@color/black"
         android:onClick="click_search_teacher"
-        android:text="Search"
+        android:text="חפש"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/checkBox_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -68,11 +62,12 @@
         android:id="@+id/checkBox_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="5dp"
-        android:text="Age"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_profession"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="41dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
+        android:text="גיל"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/checkBox_name"
         app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher" />
 
@@ -80,11 +75,12 @@
         android:id="@+id/checkBox_profession"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="5dp"
-        android:text="profession"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_id"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="41dp"
+        android:background="#BAB2B2"
+        android:text="מקצוע"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/checkBox_age"
         app:layout_constraintStart_toEndOf="@+id/checkBox_age"
         app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher" />
 
@@ -92,10 +88,13 @@
         android:id="@+id/checkBox_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="5dp"
-        android:text="Identity card"
+        android:background="#BAB2B2"
+        android:text="ת.ז"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/checkBox_profession"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/checkBox_profession"
@@ -105,29 +104,29 @@
         android:id="@+id/checkBox_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="69dp"
-        android:text="Name"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerview_client_teacher"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox_age"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="44dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
+        android:text="שם"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_search_teacher" />
 
     <Button
         android:id="@+id/button_search_by_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="49dp"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="@color/black"
         android:onClick="click_search_by_key_teacher"
-        android:text="Search by key"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerview_admin_teacher"
+        android:text="מיין"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.474"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox_age" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_id"
+        app:layout_constraintTop_toBottomOf="@+id/button_search_teacher" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
