--- a/app/src/main/res/layout/activity_update_student.xml
+++ b/app/src/main/res/layout/activity_update_student.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_main"
+    android:background="@drawable/kk"
     tools:context=".updateRemoveUser.UpdateRemoveStudent">
 
 
@@ -12,33 +12,36 @@
         android:id="@+id/editText_student_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="65dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
-        android:hint="@string/name"
+        android:hint="שם"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_last_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_last_name"
+        app:layout_constraintEnd_toStartOf="@+id/textView_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView_stusent_imag"
-        app:layout_constraintVertical_bias="1.0"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/editText_student_last_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
-        android:hint="Last Name"
+        android:hint="משפחה"
         android:inputType="textPersonName"
         android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_age"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_age"
+        app:layout_constraintEnd_toStartOf="@+id/textView_last"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -46,14 +49,16 @@
         android:id="@+id/editText_student_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
-        android:hint="Age"
+        android:hint="גיל"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_phone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_phone"
+        app:layout_constraintEnd_toStartOf="@+id/textView_age"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -61,14 +66,16 @@
         android:id="@+id/editText_student_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="תעודת זהות"
         android:inputType="textPersonName"
-        android:hint="ID"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_class"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_class"
+        app:layout_constraintEnd_toStartOf="@+id/textView_id"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -76,14 +83,16 @@
         android:id="@+id/editText_student_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="36dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="טלפון"
         android:inputType="phone"
-        android:hint="Phone"
         app:layout_constraintBottom_toBottomOf="@+id/editText_student_email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintEnd_toStartOf="@+id/textView_phone"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -91,14 +100,16 @@
         android:id="@+id/editText_student_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="מייל"
         android:inputType="textEmailAddress"
-        android:hint="Email"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_id"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_id"
+        app:layout_constraintEnd_toStartOf="@+id/textView_email"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -106,40 +117,45 @@
         android:id="@+id/button_student_update"
         android:layout_width="156dp"
         android:layout_height="49dp"
-        android:layout_marginBottom="16dp"
-        android:onClick="click_student_Update_student"
+        android:layout_marginBottom="60dp"
         android:hint="Student Update"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:onClick="click_student_Update_student"
+        android:text="עדכון חניך"
+        android:backgroundTint="@color/black"
+        android:textColorHint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/button_remove_student"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.372"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView_stusent_imag"
-        android:layout_width="185dp"
-        android:layout_height="164dp"
+        android:layout_width="164dp"
+        android:layout_height="137dp"
         android:layout_marginBottom="84dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.353"
+        app:layout_constraintHorizontal_bias="0.384"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.033"
+        app:layout_constraintVertical_bias="0.094"
         app:srcCompat="@drawable/student" />
 
     <EditText
         android:id="@+id/editText_student_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="36dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="כיתה"
         android:inputType="textPersonName"
         android:onClick="click_student_class"
-        android:hint="Class"
-        app:layout_constraintBottom_toBottomOf="@+id/button_student_update"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintBottom_toTopOf="@+id/button_student_update"
+        app:layout_constraintEnd_toStartOf="@+id/textView_class"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -147,97 +163,109 @@
         android:id="@+id/textView_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="46dp"
-        android:text="Name"
+        android:layout_marginTop="255dp"
+        android:layout_marginEnd="118dp"
+        android:layout_marginBottom="14dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
+        android:text="שם"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_last"
-        app:layout_constraintEnd_toStartOf="@+id/editText_student_name"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_last"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_last"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="47dp"
-        android:text="Last"
+        android:layout_marginEnd="92dp"
+        android:layout_marginBottom="14dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
+        android:text="משפחה"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_age"
-        app:layout_constraintEnd_toStartOf="@+id/editText_student_last_name"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_age" />
 
     <TextView
         android:id="@+id/textView_age"
         android:layout_width="35dp"
         android:layout_height="20dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="43dp"
-        android:text="Age"
+        android:layout_marginEnd="103dp"
+        android:layout_marginBottom="15dp"
+        android:background="#BAB2B2"
+        android:text="גיל"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_phone"
-        app:layout_constraintEnd_toStartOf="@+id/editText_student_age"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_phone" />
 
     <TextView
         android:id="@+id/textView_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="40dp"
-        android:text="Phone"
+        android:layout_marginEnd="105dp"
+        android:layout_marginBottom="20dp"
+        android:background="#BAB2B2"
+        android:text="טלפון"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_email"
-        app:layout_constraintEnd_toStartOf="@+id/editText_student_phone"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_email" />
 
     <TextView
         android:id="@+id/textView_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="50dp"
-        android:text="Email"
+        android:layout_width="31dp"
+        android:layout_height="16dp"
+        android:layout_marginEnd="107dp"
+        android:layout_marginBottom="15dp"
+        android:background="#BAB2B2"
+        android:text="מייל"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_id"
-        app:layout_constraintEnd_toStartOf="@+id/editText_student_email"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_id" />
 
     <TextView
         android:id="@+id/textView_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="45dp"
-        android:text="ID"
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="15dp"
+        android:background="#BAB2B2"
+        android:text="תעודת זהות"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_class"
-        app:layout_constraintEnd_toStartOf="@+id/editText_student_id"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_class" />
 
     <TextView
         android:id="@+id/textView_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="90dp"
-        android:text="Class"
+        android:layout_marginEnd="108dp"
+        android:layout_marginBottom="250dp"
+        android:background="#BAB2B2"
+        android:text="כיתה"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/editText_student_class"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/button_remove_student"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginStart="111dp"
+        android:layout_marginEnd="184dp"
+        android:layout_marginBottom="56dp"
         android:onClick="student_remove_student"
-        android:text="Remove"
+        android:text="מחיקת חנית"
+        android:backgroundTint="@color/black"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_student_update" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
