--- a/app/src/main/res/layout/activity_update_teacher.xml
+++ b/app/src/main/res/layout/activity_update_teacher.xml
@@ -4,52 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_main"
+    android:background="@drawable/kk"
     tools:context=".updateRemoveUser.UpdateRemoveTeacher">
 
 
     <ImageView
         android:id="@+id/imageView_teacher_image"
-        android:layout_width="209dp"
-        android:layout_height="194dp"
+        android:layout_width="165dp"
+        android:layout_height="147dp"
         android:layout_marginBottom="84dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.371"
+        app:layout_constraintHorizontal_bias="0.393"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.029"
+        app:layout_constraintVertical_bias="0.081"
         app:srcCompat="@drawable/teacher" />
 
     <EditText
         android:id="@+id/editText_teacher_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="71dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
         android:ems="10"
-        android:hint="Name"
+        android:hint="שם"
         android:inputType="textPersonName"
         android:textAllCaps="true"
         app:layout_constraintBottom_toTopOf="@+id/editText_teacher_last_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.35"
+        app:layout_constraintEnd_toStartOf="@+id/textView_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView_teacher_image"
-        app:layout_constraintVertical_bias="1.0"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/editText_teacher_last_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
         android:ems="10"
-        android:hint="Last Name"
+        android:hint="משפחה"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/editText_teacher_age"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.378"
+        app:layout_constraintEnd_toStartOf="@+id/textView_last"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -57,13 +60,15 @@
         android:id="@+id/editText_teacher_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
         android:ems="10"
-        android:hint="Age"
+        android:hint="גיל"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/editText_teacher_phone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintEnd_toStartOf="@+id/textView_age"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -71,13 +76,15 @@
         android:id="@+id/editText_teacher_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
         android:ems="10"
-        android:hint="Phone"
+        android:hint="מספר טלפון"
         android:inputType="phone"
         app:layout_constraintBottom_toTopOf="@+id/editText_teacher_email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintEnd_toStartOf="@+id/textView_phone"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -85,13 +92,15 @@
         android:id="@+id/editText_teacher_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
         android:ems="10"
-        android:hint="Email"
+        android:hint="מייל"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/editText_teacher_id"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintEnd_toStartOf="@+id/textView_email"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -99,13 +108,17 @@
         android:id="@+id/editText_teacher_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
-        android:hint="ID"
+        android:hint="תעודת זהות"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/editText_teacher_profession"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintEnd_toStartOf="@+id/textView_id"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -113,125 +126,142 @@
         android:id="@+id/editText_teacher_profession"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="18dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="42dp"
+        android:background="#BAB2B2"
         android:ems="10"
-        android:hint="Profession"
+        android:hint="מקצוע"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/button_update_teacher"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintEnd_toStartOf="@+id/textView_class"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
+
 
     <Button
         android:id="@+id/button_update_teacher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="40dp"
+        android:backgroundTint="@color/black"
         android:hint="Teacher Update"
         android:onClick="click_teacher_update_teacher"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="עדכון מדריך"
+        android:textColorHint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/button_remove_teacher"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.401"
+        app:layout_constraintHorizontal_bias="0.381"
         app:layout_constraintStart_toStartOf="parent" />
-
 
     <TextView
         android:id="@+id/textView_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="46dp"
-        android:text="Name"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="264dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="12dp"
+        android:background="#BAB2B2"
+        android:text="שם"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_last"
-        app:layout_constraintEnd_toStartOf="@+id/editText_teacher_name"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_last"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_last"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="47dp"
-        android:text="Last"
+        android:layout_marginEnd="82dp"
+        android:layout_marginBottom="16dp"
+        android:background="#BAB2B2"
+        android:text="משפחה"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_age"
-        app:layout_constraintEnd_toStartOf="@+id/editText_teacher_last_name"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_age" />
 
     <TextView
         android:id="@+id/textView_age"
         android:layout_width="35dp"
         android:layout_height="20dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="43dp"
-        android:text="Age"
+        android:layout_marginEnd="93dp"
+        android:layout_marginBottom="16dp"
+        android:background="#BAB2B2"
+        android:text="גיל"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_phone"
-        app:layout_constraintEnd_toStartOf="@+id/editText_teacher_age"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_phone" />
 
     <TextView
         android:id="@+id/textView_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="40dp"
-        android:text="Phone"
+        android:layout_marginEnd="95dp"
+        android:layout_marginBottom="16dp"
+        android:background="#BAB2B2"
+        android:text="טלפון"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_email"
-        app:layout_constraintEnd_toStartOf="@+id/editText_teacher_phone"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_email" />
 
     <TextView
         android:id="@+id/textView_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="50dp"
-        android:text="Email"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="99dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
+        android:text="מיייל"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_id"
-        app:layout_constraintEnd_toStartOf="@+id/editText_teacher_email"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_id" />
 
     <TextView
         android:id="@+id/textView_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="45dp"
-        android:text="ID"
+        android:layout_marginEnd="62dp"
+        android:layout_marginBottom="10dp"
+        android:background="#BAB2B2"
+        android:text="תעודת זהות"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView_class"
-        app:layout_constraintEnd_toStartOf="@+id/editText_teacher_id"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView_class" />
 
     <TextView
         android:id="@+id/textView_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="92dp"
-        android:text="Profession"
+        android:layout_marginEnd="94dp"
+        android:layout_marginBottom="251dp"
+        android:background="#BAB2B2"
+        android:text="מקצוע"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/editText_teacher_profession"
-        app:layout_constraintHorizontal_bias="0.653"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/button_remove_teacher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginStart="114dp"
+        android:layout_marginEnd="172dp"
+        android:layout_marginBottom="68dp"
+        android:backgroundTint="@color/black"
         android:onClick="click_remove_teacher"
-        android:text="Remove"
+        android:text="מחיקת מדריך"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_update_teacher" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
