--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -4,38 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_main"
+    android:background="@drawable/kk"
     tools:context=".AddUser.AddStudentActivity">
 
     <EditText
         android:id="@+id/editText_student_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="65dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="20dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="שם"
         android:inputType="textPersonName"
-        android:hint="@string/name"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_last_name"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_last_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView_stusent_imag"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.923"
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
         android:id="@+id/editText_student_last_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginBottom="20dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="משפחה"
         android:inputType="textPersonName"
-        android:hint="Last Name"
         android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_age"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_age"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,12 +47,13 @@
         android:id="@+id/editText_student_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginBottom="20dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="גיל"
         android:inputType="textPersonName"
-        android:hint="Age"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_phone"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,12 +63,13 @@
         android:id="@+id/editText_student_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginBottom="20dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="תעודת זהות"
         android:inputType="textPersonName"
-        android:hint="ID"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_class"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_class"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,12 +79,13 @@
         android:id="@+id/editText_student_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginBottom="20dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="טלפון"
         android:inputType="phone"
-        android:hint="Phone"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_email"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,12 +95,13 @@
         android:id="@+id/editText_student_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginBottom="20dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="מייל"
         android:inputType="textEmailAddress"
-        android:hint="Email"
-        app:layout_constraintBottom_toBottomOf="@+id/editText_student_id"
+        app:layout_constraintBottom_toTopOf="@+id/editText_student_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,9 +111,12 @@
         android:id="@+id/button_student_update"
         android:layout_width="156dp"
         android:layout_height="49dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="148dp"
+        android:backgroundTint="@color/black"
+        android:hint="הוסף חניך"
         android:onClick="click_student_save_student"
-        android:hint="SAVE STUDENT"
+        android:textColor="#F4F4F4"
+        android:textColorHint="#FDFAFA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.372"
@@ -115,28 +124,27 @@
 
     <ImageView
         android:id="@+id/imageView_stusent_imag"
-        android:layout_width="185dp"
-        android:layout_height="164dp"
-        android:layout_marginBottom="84dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="143dp"
+        android:layout_height="121dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.353"
+        app:layout_constraintHorizontal_bias="0.402"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.033"
         app:srcCompat="@drawable/student" />
 
     <EditText
         android:id="@+id/editText_student_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
-        android:backgroundTint="#3F51B5"
+        android:layout_marginBottom="29dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="כיתה"
         android:inputType="textPersonName"
         android:onClick="click_student_class"
-        android:hint="Class"
-        app:layout_constraintBottom_toBottomOf="@+id/button_student_update"
+        app:layout_constraintBottom_toTopOf="@+id/button_student_update"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
