--- a/app/src/main/res/layout/activity_admin_contact_list_student.xml
+++ b/app/src/main/res/layout/activity_admin_contact_list_student.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_main"
+    android:background="@drawable/kk"
     android:paddingLeft="16dp"
     android:paddingTop="@dimen/cardview_compat_inset_shadow"
     android:paddingRight="16dp"
@@ -13,26 +13,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_admin_student"
-        android:layout_width="0dp"
-        android:layout_height="433dp"
-        android:layout_marginBottom="48dp"
+        android:layout_width="374dp"
+        android:layout_height="436dp"
+        android:layout_marginBottom="64dp"
+        android:background="#BAB2B2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button_add_student"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="14dp"
-        android:onClick="click_add_student"
-        android:text="Add student"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.455"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerview_admin_student" />
 
     <EditText
         android:id="@+id/editText_search_student"
@@ -42,9 +30,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="40dp"
+        android:background="#BAB2B2"
         android:ems="10"
+        android:hint="הכנס שם"
         android:inputType="textPersonName"
-        android:hint="@string/name"
         app:layout_constraintBottom_toTopOf="@+id/checkBox_age"
         app:layout_constraintEnd_toStartOf="@+id/button_search_student"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,8 +47,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="47dp"
+        android:backgroundTint="@color/black"
         android:onClick="click_search_student"
-        android:text="Search"
+        android:text="חפש"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/checkBox_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -70,9 +61,12 @@
         android:id="@+id/checkBox_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="40dp"
-        android:text="Age"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
+        android:text="גיל"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/checkBox_name"
         app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
 
@@ -80,9 +74,11 @@
         android:id="@+id/checkBox_class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="40dp"
-        android:text="Class"
+        android:background="#BAB2B2"
+        android:text="כיתה"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/checkBox_age"
         app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
 
@@ -90,9 +86,11 @@
         android:id="@+id/checkBox_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="40dp"
-        android:text="Identity card"
+        android:background="#BAB2B2"
+        android:text="ת.ז"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/checkBox_class"
@@ -102,9 +100,11 @@
         android:id="@+id/checkBox_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:text="Name"
+        android:background="#BAB2B2"
+        android:text="שם"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_search_student" />
 
@@ -112,14 +112,16 @@
         android:id="@+id/button_search_by_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="@color/black"
         android:onClick="click_search_by_key_student"
-        android:text="Search by key"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerview_admin_student"
+        android:text="מיין"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.474"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox_age" />
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_id"
+        app:layout_constraintTop_toBottomOf="@+id/button_search_student" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
