--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -57,7 +57,7 @@
         android:drawablePadding="20dp"
         android:inputType="textPassword"/>
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/click_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
