--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_screen"
+    android:id="@+id/main_screen_admin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_main"
+    android:background="@drawable/kk"
     android:paddingLeft="16dp"
     android:paddingTop="@dimen/cardview_compat_inset_shadow"
     android:paddingRight="16dp"
@@ -13,163 +13,89 @@
     tools:context=".menu.AdminMenuActivity">
 
 
-    <ImageButton
-        android:id="@+id/imageButton_timetable"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginBottom="17dp"
-        android:onClick="click_timetable"
-        app:layout_constraintBottom_toTopOf="@+id/textView_student"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_admin"
-        app:srcCompat="@drawable/calendar"
-        tools:ignore="SpeakableTextPresentCheck" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView_main_concern"
-        android:layout_width="328dp"
-        android:layout_height="86dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/second_main_picture" />
 
-    <Button
-        android:id="@+id/button_logout"
+        <TextView
+            android:id="@+id/textView_name_client"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="cursive"
+            android:text="שם המלא"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toTopOf="@+id/imageView6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <Button
+            android:id="@+id/button_logout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#3F51B5"
+            android:backgroundTint="#3F51B5"
+            android:onClick="client_click_logout"
+            android:text="logout"
+            tools:layout_editor_absoluteX="411dp"
+            tools:layout_editor_absoluteY="685dp" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="343dp"
+            android:layout_height="167dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/neve_golan" />
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="383dp"
+            android:layout_height="324dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="150dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            app:srcCompat="@drawable/w" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="40dp"
+            android:fontFamily="cursive"
+            android:text="ברוך הבא"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_name_client"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.527"
+            app:layout_constraintStart_toEndOf="@+id/textView_name_client"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView_admin"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="112dp"
-        android:background="#3F51B5"
-        android:backgroundTint="#3F51B5"
-        android:onClick="click_logout"
-        android:text="logout"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_main_concern"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.474"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/header_menu"
+        app:menu="@menu/menu_main" />
 
-    <ImageView
-        android:id="@+id/imageView_teacher"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="20dp"
-        android:onClick="click_teachers"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_student"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.895"
-        app:layout_constraintStart_toEndOf="@+id/imageView_student"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_private"
-        app:srcCompat="@drawable/teacher"
-        tools:ignore="SpeakableTextPresentCheck" />
 
-    <ImageView
-        android:id="@+id/imageView_student"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginBottom="172dp"
-        android:onClick="click_student"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_main_concern"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton_timetable"
-        app:srcCompat="@drawable/student"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <ImageView
-        android:id="@+id/imageView_private"
-        android:layout_width="182dp"
-        android:layout_height="166dp"
-        android:layout_marginStart="73dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp"
-        android:onClick="click_private"
-        app:layout_constraintBottom_toTopOf="@+id/textView_teachers"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageButton_timetable"
-        app:layout_constraintTop_toBottomOf="@+id/textView_admin"
-        app:srcCompat="@drawable/personal"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <TextView
-        android:id="@+id/textView_student"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginBottom="124dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Student"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_student"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView_teachers"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="122dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="124dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Teachers"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_teacher"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_student" />
-
-    <TextView
-        android:id="@+id/textView_timetable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Timetable"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton_timetable"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView_private"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="132dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Private"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView_teachers"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.835"
-        app:layout_constraintStart_toEndOf="@+id/textView_timetable" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="377dp"
-        android:layout_height="127dp"
-        android:layout_marginBottom="17dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView_admin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/neve_golan" />
-
-    <TextView
-        android:id="@+id/textView_admin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="161dp"
-        android:fontFamily="cursive"
-        android:text="Admin"
-        android:textSize="48sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
