--- a/app/src/main/res/layout/activity_personal_information_teacher.xml
+++ b/app/src/main/res/layout/activity_personal_information_teacher.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".personalInformation.Personal_Information_teacher"
-    android:background="@drawable/background_main">
+    android:background="@drawable/kk">
 
     <TextView
         android:id="@+id/textView_id_teacher"
         android:layout_width="200dp"
         android:layout_height="51dp"
         android:layout_marginBottom="20dp"
-        android:text="TextView"
+        android:background="#BAB2B2"
+        android:text="תעודת זהות"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView_age_teacher"
         app:layout_constraintEnd_toEndOf="@+id/textView_age_teacher"
@@ -23,7 +24,8 @@
         android:layout_width="200dp"
         android:layout_height="51dp"
         android:layout_marginBottom="20dp"
-        android:text="TextView"
+        android:background="#BAB2B2"
+        android:text="משפחה"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView_id_teacher"
         app:layout_constraintEnd_toEndOf="@+id/textView_id_teacher"
@@ -33,8 +35,9 @@
         android:id="@+id/textView_name_teacher"
         android:layout_width="200dp"
         android:layout_height="51dp"
-        android:layout_marginBottom="24dp"
-        android:text="TextView"
+        android:layout_marginBottom="20dp"
+        android:background="#BAB2B2"
+        android:text="שם"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView_last_name_teacher"
         app:layout_constraintEnd_toEndOf="@+id/textView_last_name_teacher"
@@ -47,8 +50,9 @@
         android:layout_height="51dp"
         android:layout_marginStart="105dp"
         android:layout_marginEnd="106dp"
-        android:layout_marginBottom="16dp"
-        android:text="TextView"
+        android:layout_marginBottom="64dp"
+        android:background="#BAB2B2"
+        android:text="מקצוע"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,10 +61,11 @@
 
     <TextView
         android:id="@+id/textView_email_teacher"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="203dp"
+        android:layout_height="53dp"
         android:layout_marginBottom="20dp"
-        android:text="TextView"
+        android:background="#BAB2B2"
+        android:text="מייל"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView_profession_teacher"
         app:layout_constraintEnd_toEndOf="@+id/textView_profession_teacher"
@@ -71,7 +76,8 @@
         android:layout_width="200dp"
         android:layout_height="51dp"
         android:layout_marginBottom="20dp"
-        android:text="TextView"
+        android:background="#BAB2B2"
+        android:text="טלפון"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView_email_teacher"
         app:layout_constraintEnd_toEndOf="@+id/textView_email_teacher"
@@ -79,28 +85,31 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="206dp"
-        android:layout_height="190dp"
+        android:layout_width="184dp"
+        android:layout_height="149dp"
         android:layout_marginStart="63dp"
         android:layout_marginTop="25dp"
         android:layout_marginEnd="120dp"
         android:layout_marginBottom="15dp"
-        android:src="@drawable/information"
+        android:src="@drawable/ic_baseline_assignment_ind_24"
         app:layout_constraintBottom_toTopOf="@+id/textView_name_teacher"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView_age_teacher"
         android:layout_width="200dp"
         android:layout_height="51dp"
         android:layout_marginBottom="20dp"
-        android:text="TextView"
+        android:background="#BAB2B2"
+        android:text="גיל"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView_phone_teacher"
         app:layout_constraintEnd_toEndOf="@+id/textView_phone_teacher"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView_phone_teacher" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
