--- a/app/src/main/res/layout/recycleritem_student.xml
+++ b/app/src/main/res/layout/recycleritem_student.xml
@@ -1,185 +1,220 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/screen_container_student"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="16dp"
-    android:paddingTop="@dimen/cardview_compat_inset_shadow"
-    android:paddingRight="16dp"
-    android:paddingBottom="16dp">
+    android:layout_margin="8dp"
+    app:cardCornerRadius="100dp"
+    app:cardElevation="8dp"
 
-    <ImageView
-        android:id="@+id/imageView_sdudent"
-        android:layout_width="52dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="12dp"
-        android:onClick="Click_imageView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/student"
-        tools:ignore="SpeakableTextPresentCheck" />
+    >
 
-    <TextView
-        android:id="@+id/textView_student_name"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="Name"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView_student_last_name"
-        app:layout_constraintStart_toEndOf="@+id/textView10" />
+        android:layout_margin="8dp"
+        android:background="#C8C4C4"
+        android:paddingLeft="16dp"
+        android:paddingTop="@dimen/cardview_compat_inset_shadow"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp">
 
-    <TextView
-        android:id="@+id/textView_student_last_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
-        android:layout_marginBottom="25dp"
-        android:text="Last Name"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView_student_id"
-        app:layout_constraintStart_toEndOf="@+id/textView11" />
+        <ImageView
+            android:id="@+id/imageView_sdudent"
+            android:layout_width="52dp"
+            android:layout_height="53dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/student"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-    <TextView
-        android:id="@+id/textView_student_age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="2dp"
-        android:text="Age"
-        android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/textView18"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_sdudent" />
+        <TextView
+            android:id="@+id/textView_student_name"
+            android:layout_width="43dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="6dp"
+            android:text="Name"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView_student_last_name"
+            app:layout_constraintEnd_toEndOf="@+id/textView_student_last_name"
+            app:layout_constraintStart_toEndOf="@+id/imageView_sdudent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView_student_phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="18dp"
-        android:text="Phone"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView_student_email"
-        app:layout_constraintStart_toEndOf="@+id/textView15" />
+        <TextView
+            android:id="@+id/textView_student_last_name"
+            android:layout_width="61dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="44dp"
+            android:layout_marginBottom="13dp"
+            android:text="Last Name"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView_student_id"
+            app:layout_constraintEnd_toEndOf="@+id/textView_student_id"
+            app:layout_constraintStart_toEndOf="@+id/imageView_sdudent" />
 
-    <TextView
-        android:id="@+id/textView_student_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="25dp"
-        android:text="Email"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView_student_class"
-        app:layout_constraintStart_toEndOf="@+id/textView16" />
+        <TextView
+            android:id="@+id/textView_student_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="5dp"
+            android:text="Age"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView_sdudent" />
 
-    <TextView
-        android:id="@+id/textView_student_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
-        android:layout_marginBottom="12dp"
-        android:text="identity card"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView14" />
+        <TextView
+            android:id="@+id/textView_student_phone"
+            android:layout_width="43dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="9dp"
+            android:text="Phone"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView_student_email"
+            app:layout_constraintEnd_toEndOf="@+id/textView_student_email"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView_student_class"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="12dp"
-        android:text="Class"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView17" />
+        <TextView
+            android:id="@+id/textView_student_email"
+            android:layout_width="48dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="Email"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView_student_class"
+            app:layout_constraintEnd_toEndOf="@+id/textView_student_class" />
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="0dp"
-        android:layout_height="4dp"
-        android:layout_marginTop="12dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintEnd_toEndOf="@+id/textView_student_phone"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView_sdudent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_sdudent" />
+        <TextView
+            android:id="@+id/textView_student_id"
+            android:layout_width="66dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="10dp"
+            android:text="identity card"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView18" />
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="8dp"
-        android:text="Name"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
-        app:layout_constraintStart_toEndOf="@+id/imageView_sdudent" />
+        <TextView
+            android:id="@+id/textView_student_class"
+            android:layout_width="36dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Class"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView14" />
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="24dp"
-        android:text="Last Name"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView14"
-        app:layout_constraintStart_toEndOf="@+id/imageView_sdudent" />
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:text="שם"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView11"
+            app:layout_constraintStart_toStartOf="@+id/textView11"
+            app:layout_constraintTop_toTopOf="@+id/textView_student_name" />
 
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="26dp"
-        android:layout_height="11dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="12dp"
-        android:text="ID"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView_sdudent" />
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="משפחה"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView14"
+            app:layout_constraintStart_toStartOf="@+id/textView14" />
 
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="21dp"
-        android:text="Phone"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView16"
-        app:layout_constraintStart_toStartOf="@+id/textView16" />
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="תעודת זהות"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_student_id"
+            app:layout_constraintStart_toEndOf="@+id/textView_student_id" />
 
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        android:text="Email"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView17"
-        app:layout_constraintStart_toStartOf="@+id/textView17" />
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="31dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="טלפון"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView16"
+            app:layout_constraintStart_toStartOf="@+id/textView16"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="11dp"
-        android:text="Class"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/divider"
-        app:layout_constraintStart_toEndOf="@+id/textView_student_id" />
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="מייל"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView17"
+            app:layout_constraintStart_toStartOf="@+id/textView17" />
 
-    <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:text="Age"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_sdudent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="כיתה"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_student_class"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.204"
+            app:layout_constraintStart_toEndOf="@+id/textView_student_class" />
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="39dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="3dp"
+            android:text="גיל"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_student_age"
+            app:layout_constraintStart_toEndOf="@+id/textView_student_age"
+            app:layout_constraintTop_toBottomOf="@+id/imageView_sdudent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <!--        <View-->
+<!--            android:id="@+id/divider"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="4dp"-->
+<!--            android:layout_marginTop="12dp"-->
+<!--            android:background="?android:attr/listDivider"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/textView_student_phone"-->
+<!--            app:layout_constraintHorizontal_bias="1.0"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/imageView_sdudent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/imageView_sdudent" />-->
+
+
+
+
+
+</androidx.cardview.widget.CardView>
