--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,23 +2,97 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+<group android:checkableBehavior="single">
+<item
+    android:id="@+id/nav_home"
+    android:icon="@drawable/ic_baseline_home_24"
+    android:title="מסך הבית" />
+<item
+    android:id="@+id/nav_private"
+    android:icon="@drawable/ic_baseline_assignment_ind_24"
+    android:title="מידע אישי" />
+<item
+    android:id="@+id/nav_calendar"
+    android:icon="@drawable/ic_baseline_calendar_month_24"
+    android:title="לוח שנה" />
+<item
+    android:id="@+id/nav_messages"
+    android:icon="@drawable/ic_baseline_message_24"
+    android:title="הודעות" />
+<item
+    android:id="@+id/nav_feedbacks"
+    android:icon="@drawable/ic_baseline_feedback_24"
+    android:title="משובים" />
+<item
+    android:id="@+id/nav_requests"
+    android:icon="@drawable/ic_baseline_hail_24"
+    android:title="בקשות" />
     <item
-        app:showAsAction="always"
-        android:icon="@drawable/ic_more_vert"
-        android:title="">
-        <menu>
+        android:id="@+id/nav_notes"
+        android:icon="@drawable/ic_baseline_speaker_notes_24"
+        android:title="פתקיות" />
+
+</group>
+
+<group android:checkableBehavior="single">
+<item android:title="ממשתמשים" android:icon="@drawable/ic_baseline_supervised_user_circle_24">
+
+    <menu>
+        <group>
+            <item
+                android:id="@+id/nav_teacher"
+                android:icon="@drawable/ic_baseline_person_search_24"
+                android:title="חיפוש מדריך" />
+            <item
+                android:id="@+id/nav_student"
+                android:icon="@drawable/ic_baseline_person_search_24"
+                android:title="חיפוש חניך" />
+            <item
+                android:id="@+id/nav_add_teacher"
+                android:icon="@drawable/ic_baseline_person_add_alt_1_24"
+                android:title="הוספת מדריך" />
+            <item
+                android:id="@+id/nav_add_student"
+                android:icon="@drawable/ic_baseline_person_add_alt_1_24"
+                android:title="הוספת חניך" />
+
             <item
                 android:id="@+id/add_admin"
-                android:title="Add Admin"
-                app:showAsAction="never"/>
+                android:title="הוספת מנהל"
+                android:icon="@drawable/ic_baseline_admin_panel_settings_24"/>
             <item
                 android:id="@+id/add_user"
-                android:title="Add User"
-                app:showAsAction="never"/>
+                android:title="הוספת משתמש"
+                android:icon="@drawable/ic_baseline_person_add_alt_24"/>
             <item
                 android:id="@+id/delete_admin"
-                android:title="Delete Admin"
-                app:showAsAction="never"/>
-        </menu>
-    </item>
-</menu>
+                android:title="למחוק מנהל"
+                android:icon="@drawable/ic_baseline_admin_panel_settings_24"/>
+
+        </group>
+    </menu>
+</item>
+
+</group>
+
+
+
+
+<group android:checkableBehavior="single">
+<item android:title="אחר" android:icon="@drawable/ic_baseline_east_24">
+
+    <menu>
+        <group>
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/ic_baseline_logout_24"
+                android:title="יציאה" />
+
+        </group>
+    </menu>
+</item>
+
+</group>
+    </menu>
+
+
